<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        style="@style/tittle"
        android:text="@string/tamung"/>
    <LinearLayout
        style="@style/linear">
        <TextView
            style="@style/tieudetruocedit"
            android:text="@string/manv"
            />
        <EditText
            android:id="@+id/tvMaSVTU"
            style="@style/edittext"
            android:hint="@string/nhapmanv"/>
    </LinearLayout>
    <LinearLayout
        style="@style/linear">
        <TextView
            style="@style/tieudetruocedit"
            android:text="@string/sophieu"
            />
        <EditText
            android:id="@+id/tvSoPhieu"
            style="@style/edittext"
            android:hint="@string/nhapsophieu"/>
    </LinearLayout>
    <LinearLayout
        style="@style/linear">
        <TextView
            style="@style/tieudetruocedit"
            android:text="@string/ngay"
            />
        <EditText
            android:id="@+id/tvNgay"
            style="@style/edittext"
            android:hint="@string/nhapngay"/>
    </LinearLayout>
    <LinearLayout
        style="@style/linear">
        <TextView
            style="@style/tieudetruocedit"
            android:text="@string/sotien"
            />
        <EditText
            android:id="@+id/tvSoTien"
            style="@style/edittext"
            android:hint="@string/nhapsotien"/>
    </LinearLayout>


    <LinearLayout
        style="@style/lineartrangchinh">
        <Button
            android:background="@drawable/them"
            android:id="@+id/btnThem"
            style="@style/button"
            android:text="@string/them"
            android:drawableLeft="@drawable/ic_add_box_black_24dp"
            ></Button>
        <Button
            android:background="@drawable/them"
            android:id="@+id/btnXoa"
            style="@style/button"
            android:text="@string/xoa"
            android:drawableLeft="@drawable/ic_delete_black_24dp"
            ></Button>
        <Button
            android:background="@drawable/them"
            android:id="@+id/btnSua"
            style="@style/button"
            android:text="@string/sua"
            android:drawableLeft="@drawable/ic_edit_black_24dp"
            ></Button>
        <Button
            android:background="@drawable/exit"
            android:id="@+id/btnThoat"
            style="@style/buttonthoat"

            ></Button>
    </LinearLayout>
    <TextView
        style="@style/phu"
        android:text="@string/dstamung"></TextView>
    <GridView
        android:id="@+id/gvDanhSachTamUng"
        style="@style/gv"></GridView>
</LinearLayout>