<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    >

    <TextView
       style="@style/tittle"
        android:text="@string/tieude"/>
    <LinearLayout
       style="@style/lineartrangchinh">
    <Button
        android:id="@+id/btnThemNV"
        style="@style/buttonchinh"
        android:text="@string/themnv"
        android:drawableTop="@drawable/ic_add_box_black_24dp"
     />
    <Button
        android:id="@+id/btnBangLuong"
        style="@style/buttonchinh"
        android:text="@string/bangluong"
        android:drawableTop="@drawable/ic_event_note_black_24dp"
       />
    </LinearLayout>

    <LinearLayout
        style="@style/lineartrangchinh">
    <Button
        android:id="@+id/btnChamCong"
        style="@style/buttonchinh"
        android:text="@string/chamcong"
        android:drawableTop="@drawable/ic_date_range_black_24dp"
       />
    <Button
        android:id="@+id/btnPhongBan"
        style="@style/buttonchinh"
        android:text="@string/phongban"
        android:drawableTop="@drawable/ic_home_black_24dp"
       />
    </LinearLayout>
<!--    <LinearLayout-->
<!--        style="@style/lineartrangchinh">-->
<!--        <Button-->
<!--            android:id="@+id/btnGiaiTri"-->
<!--            style="@style/buttonchinh"-->
<!--            android:text="@string/giaitri"-->
<!--            android:drawableTop="@drawable/ic_payment_black_24dp"-->
<!--            />-->
<!--        <Button-->
<!--            android:id="@+id/btnLac"-->
<!--            style="@style/buttonchinh"-->
<!--            android:text="Lắc"-->
<!--            android:drawableTop="@drawable/ic_payment_black_24dp"-->
<!--            />-->
<!--    </LinearLayout>-->
    <LinearLayout
        style="@style/lineartrangchinh">
        <Button
            android:id="@+id/btnTamUng"
            style="@style/buttonchinh"
            android:text="@string/tamung"
            android:drawableTop="@drawable/ic_payment_black_24dp"
            />
        <Button
            android:id="@+id/btnThoat"
            style="@style/buttonchinh"
            android:text="@string/thoat"
            android:drawableTop="@drawable/ic_edit_black_24dp"
            />
    </LinearLayout>

</LinearLayout>