<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        style="@style/tittle"
        android:text="@string/dstamung" />

    <LinearLayout
        style="@style/linear">
        <TextView
            style="@style/tieudetruocedit"
            android:text="@string/manv"></TextView>
        <TextView
            android:id="@+id/tvmaTU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>

    <LinearLayout
        style="@style/linear">
        <TextView
            style="@style/tieudetruocedit"
            android:text="@string/sophieu"></TextView>
        <TextView
            android:id="@+id/tvSophieuTU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>
    <LinearLayout
        style="@style/linear">
        <TextView
            style="@style/tieudetruocedit"
            android:text="@string/ngay"></TextView>
        <TextView
            android:id="@+id/tvngayTamung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>
    <LinearLayout
        style="@style/linear">
        <TextView
            style="@style/tieudetruocedit"
            android:text="@string/sotien"></TextView>
        <TextView
            android:id="@+id/tvsoTienTamUng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>

</LinearLayout>