<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <TextView
       style="@style/tittle"
        android:text="@string/dscc"></TextView>
    <LinearLayout
      style="@style/linear">
        <TextView
            style="@style/tieudetruocedit"
            android:text="@string/manv"></TextView>
        <TextView
            android:id="@+id/tvMaNVCCchitiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>
    </LinearLayout>
    <LinearLayout
        style="@style/linear">
        <TextView
            style="@style/tieudetruocedit"
            android:text="@string/ngayghiso"></TextView>
        <TextView
            android:id="@+id/tvngayGhiSoCCchitiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>
    </LinearLayout>
    <LinearLayout
        style="@style/linear">
        <TextView
            style="@style/tieudetruocedit"
            android:text="@string/songaycong"></TextView>
        <TextView
            android:id="@+id/tvSoNgayCongCCchitiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>
    </LinearLayout>
</LinearLayout>